<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="firebase.william.com.mainbluetoothactivity.MainActivity">

    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dispositivosPareados"
        android:id="@+id/idButtonPairedDevices"
        android:singleLine="false"
        android:onClick="searchPairedDevices"
        android:layout_below="@+id/idButtonHabilitar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Iniciardescoberta"
        android:id="@+id/idButtonDiscoveredDevices"
        android:onClick="discoverDevices"
        android:nestedScrollingEnabled="true"
        android:layout_below="@+id/idButtonPairedDevices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HabilitarVisibilidade"
        android:id="@+id/idButtonVisibility"
        android:onClick="enableVisibility"
        android:layout_below="@+id/idButtonDiscoveredDevices"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Habilitar"
        android:id="@+id/idButtonHabilitar"
        android:layout_below="@+id/statusMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="HabilitarBT" />

</RelativeLayout>
